--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -2,6 +2,7 @@
 @import url("https://use.fontawesome.com/releases/v5.8.2/css/all.css");
 @import url("https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css");
 @import url("https://fonts.googleapis.com/css?family=Roboto+Mono:400,500&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap');
 
 body {
   font-family: "Roboto Mono", monospace !important;
