--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -6,7 +6,7 @@
 
 /* Main page style */
 body {
-  background-color: #eff4fd;
+  background-color: #3A425D !important;
 }
 
 /* Blog style */
@@ -19,23 +19,32 @@ body {
   text-decoration: none;
 }
 .blog-card {
-  background-color: #fea53e;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: white;
+  outline: 5px solid #222;
   height: auto;
-  min-height: 220px;
+  max-height: 200px;
+  overflow: hidden;
   width: 100% !important;
   padding: 30px 35px;
   box-sizing: border-box;
   margin-bottom: 50px;
   position: relative;
-  box-shadow: 20px 20px #222;
+  box-shadow: 20px 20px #FCAF3E;
   transition: box-shadow 0.15s ease-in;
 }
 .blog-card:hover {
-  box-shadow: 15px 15px #222;
+  box-shadow: 15px 15px #FCAF3E;
 }
 .blog-card .blog-title {
   font-size: 32px;
   margin-bottom: 30px;
+}
+.blog-card span {
+  font-size: 14px;
+  color: #FCAF3E;
 }
 
 /* Responsive */
