--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -6,7 +6,7 @@
 
 /* Main page style */
 body {
-  background-color: #3A425D !important;
+  background-color: #3a425d !important;
 }
 
 /* Blog style */
@@ -32,11 +32,11 @@ body {
   box-sizing: border-box;
   margin-bottom: 50px;
   position: relative;
-  box-shadow: 20px 20px #FCAF3E;
+  box-shadow: 20px 20px #fcaf3e;
   transition: box-shadow 0.15s ease-in;
 }
 .blog-card:hover {
-  box-shadow: 15px 15px #FCAF3E;
+  box-shadow: 15px 15px #fcaf3e;
 }
 .blog-card .blog-title {
   font-size: 32px;
@@ -44,7 +44,7 @@ body {
 }
 .blog-card span {
   font-size: 14px;
-  color: #FCAF3E;
+  color: #fcaf3e;
 }
 
 /* Responsive */
@@ -70,5 +70,50 @@ body {
     text-align: left;
     width: 100%;
     max-width: 100% !important;
+  }
+}
+
+.box {
+  content: "";
+  position: absolute;
+  width: 200px;
+  height: 290px;
+  background-color: rgb(248, 209, 150);
+  border: 3px solid #222;
+  z-index: -1;
+  right: 0;
+  top: -50px;
+  animation-name: floating;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  /* box-shadow: 0 10px 50px rgba(0, 0, 0, .3); */
+}
+.box::after {
+  content: "";
+  position: absolute;
+  width: 200px;
+  height: 250px;
+  background-color: #d0a3b0;
+  border: 3px solid #222;
+  z-index: -1;
+  right: 100px;
+  top: 90px;
+  animation-name: floating;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-out;
+  /* box-shadow: 0 10px 50px rgba(0, 0, 0, .3); */
+}
+
+@keyframes floating {
+  0% {
+    transform: translate(0, 0px);
+  }
+  65% {
+    transform: translate(0, 20px);
+  }
+  100% {
+    transform: translate(0, 0px);
   }
 }
